<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_gradient"
        android:orientation="vertical"
        android:padding="12dp"
        tools:context=".Home1Fragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tvFecha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:layout_marginBottom="4dp"
                    android:text="@string/nameEm"
                    android:textColor="#ffffff"
                    android:textSize="30sp" />




                <androidx.cardview.widget.CardView
                    android:id="@+id/card1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:layout_marginTop="8dp"
                                android:layout_marginBottom="8dp"
                                android:fontFamily="@font/roboto_medium"
                                android:text="@string/lblCampaña" />

                            <EditText
                                android:id="@+id/txtCampania"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:layout_marginTop="8dp"
                                android:layout_marginRight="25dp"
                                android:layout_marginBottom="8dp"
                                android:backgroundTint="@color/colorPrimary"
                                android:focusable="false"
                                android:fontFamily="@font/roboto_medium"
                                android:hint="@string/txtCamp"
                                android:inputType="date"
                                android:textAlignment="center"
                                android:textSize="18sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:layout_marginTop="8dp"
                                android:layout_marginBottom="8dp"
                                android:fontFamily="@font/roboto_medium"
                                android:text="@string/lblUnidadP" />

                            <Spinner
                                android:id="@+id/spinUnidadP"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:layout_marginTop="8dp"
                                android:layout_marginRight="8dp"
                                android:layout_marginBottom="8dp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:layout_marginTop="8dp"
                                android:layout_marginBottom="8dp"
                                android:fontFamily="@font/roboto_medium"
                                android:text="@string/lblLote" />

                            <Spinner
                                android:id="@+id/spinLote"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:layout_marginTop="8dp"
                                android:layout_marginRight="8dp"
                                android:layout_marginBottom="8dp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:layout_marginTop="8dp"
                                android:layout_marginBottom="8dp"
                                android:fontFamily="@font/roboto_medium"
                                android:text="@string/lblActividad" />

                            <Spinner
                                android:id="@+id/spinActividad"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:layout_marginTop="8dp"
                                android:layout_marginRight="8dp"
                                android:layout_marginBottom="8dp" />

                        </LinearLayout>

                        <Button
                            android:id="@+id/btnSiguiente"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_marginBottom="8dp"
                            android:background="@drawable/boton_inicio"
                            android:drawableEnd="@drawable/ic_next_icon"
                            android:paddingLeft="12dp"
                            android:paddingRight="12dp"
                            android:text="@string/btnSiguiente"
                            android:textColor="#ffffff" />


                    </LinearLayout>

                </androidx.cardview.widget.CardView>


            </LinearLayout>
        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
